force-app/main/default/objects/Lesson__c/Lesson__c.object-meta.xml
<CustomObject>
    <label>Lesson</label>
    <nameField>
        <displayFormat>LES-{0000}</displayFormat>
        <label>Lesson Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lessons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>