force-app/main/default/objects/Lesson__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matematik</fullName>
            </value>
            <value>
                <fullName>Fizik</fullName>
            </value>
            <value>
                <fullName>Kimya</fullName>
            </value>
            <value>
                <fullName>Geometri</fullName>
            </value>
            <value>
                <fullName>İngilizce</fullName>
            </value>
            <value>
                <fullName>Türkçe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>