force-app/main/default/objects/Lesson__c/fields/Lesson_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lesson_Notes__c</fullName>
    <label>Ders Notu</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>